# wabi-sabi

./: .gitignore  LICENSE  README.md  README_ES.md  anti_ia_detector_web.html  index.html  medioevo_output.py  requirements.txt  text_processor.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/commercial/mini-office/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  INICIO_RAPIDO.md  INSTALL_AND_RUN.bat  LICENSE  PROYECTO_RESUMEN.md  PUBLICAR_AGORA.md  PUBLICAR_EN_GITHUB.md  README.md  SECURITY.md  SECURITY_TESTS_REPORT.md  THIRD_PARTY_NOTICES.md  gumroad_page.html  index.html  install_and_run.sh  landing.html  mini_office.py  package.json  public.css  pyproject.toml  requirements.txt  setup.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/commercial/mini-office/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/commercial/mini-office/agents/: __init__.py  analyst.py  copywriter.py  creative.py  designer.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/commercial/mini-office/tests/: __init__.py  test_functional.py  test_security.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/commercial/mini-office/tools/: generate_promo_materials.py  publicar_gumroad.py  publicar_web.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/local/wabi-sabi/: .gitignore  ASSUMPTIONS.md  DECISIONS.md  HANDOFF_WABI_SABI_CURADOR_ORDEN_2026-05-07.md  MIGRATION_LOG.md  NEXT_SESSION_BRIEF.md  README.md  REPORT_WABI_SABI_LOCAL_AGENTS.md  RISKS.md  SESSION_FINGERPRINT.json  SESSION_FINGERPRINT_WABI_ASSETS_RELEASE_20260519.json  SESSION_FINGERPRINT_WABI_BUILD_ASSIST_CLOUD_20260519.json  SESSION_FINGERPRINT_WABI_BUILD_ASSIST_NVIDIA_SMOKE_20260519.json  SESSION_FINGERPRINT_WABI_CANONICAL_ROUTE_20260516.json  SESSION_FINGERPRINT_WABI_CLEANUP_20260516.json  SESSION_FINGERPRINT_WABI_CLOUD_BUDGET_GATE_20260519.json  SESSION_FINGERPRINT_WABI_CLOUD_BUDGET_UI_20260519.json  SESSION_FINGERPRINT_WABI_CLOUD_BUDGET_UI_VISUAL_QA_20260519.json  SESSION_FINGERPRINT_WABI_CLOUD_PROPOSAL_20260518.json  SESSION_FINGERPRINT_WABI_CLOUD_PROVIDER_20260518.json  SESSION_FINGERPRINT_WABI_CONVERSATIONAL_CLI_20260519.json  SESSION_FINGERPRINT_WABI_CURADOR_MODULE_20260516.json  SESSION_FINGERPRINT_WABI_ENGINE_20260516.json  SESSION_FINGERPRINT_WABI_ENGINE_MODULE_20260516.json  SESSION_FINGERPRINT_WABI_LLM_CLOUD_WORK_MODE_20260519.json  SESSION_FINGERPRINT_WABI_LLM_SAFE_JSON_20260520.json  SESSION_FINGERPRINT_WABI_MULTIMODAL_20260517.json  SESSION_FINGERPRINT_WABI_OPERATOR_MODULE_20260516.json  SESSION_FINGERPRINT_WABI_PROVIDERS_MODULE_20260516.json  SESSION_FINGERPRINT_WABI_RUNTIME_EVIDENCE_20260516.json  SESSION_FINGERPRINT_WABI_SAFE_EXECUTION_MODULE_20260516.json  SESSION_FINGERPRINT_WABI_UI_CONVERSATION_ENGINE_20260519.json  SESSION_FINGERPRINT_WABI_UI_TASKSPEC_GATE_PREVIEW_20260519.json  SESSION_FINGERPRINT_WABI_UI_TASKSPEC_REVIEW_20260519.json  SESSION_FINGERPRINT_WABI_WORK_MODE_20260519.json  SESSION_FINGERPRINT_WABI_ZERO_BYTE_JOB_LOGS_20260516.json  TASKS.md  TEST_REPORT.md  pyproject.toml  wabi-window.cmd  (+3 more)
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/local/wabi-sabi/adapters/: README.md  adapter_deepsee4.py  adapter_nemotron.py  adapter_qwen.py  stub_deepsee4.py  stub_nemotron.py  stub_qwen.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/local/wabi-sabi/config/: models.wabisabi.yaml  models.wabisabi_extra.yaml
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/local/wabi-sabi/docs/: ARCHITECTURE.md  BROWSER_BRIDGE_MULTIBACKEND_2026-05-18.md  CONVERSATIONAL_BLUEPRINTS_2026-05-06.md  ENGINE_MODULAR_WABI_SABI.md  KIMI_WEBBRIDGE_DRY_RUN_EXAMPLES_20260518.md  KIMI_WEBBRIDGE_SETUP_GUIDE_REDACTED_20260518.md  NVIDIA_PROVIDER_MODEL_ROUTE_REVIEW_20260518.md  USAGE.md  WABI_ASSETS_DU_WABI_AUDIT_2026-05-19.md  WABI_BUILD_ASSIST_CLOUD_2026-05-19.md  WABI_CLOUD_BUDGET_GATE_2026-05-19.md  WABI_CLOUD_BUDGET_UI_2026-05-19.md  WABI_CONVERSATIONAL_CLI_2026-05-19.md  WABI_LLM_CLOUD_WORK_MODE_2026-05-19.md  WABI_LLM_RESPONSIBLE_USE_2026-05-20.md  WABI_LOCAL_APPLY_CLOSEOUT_2026-05-21.md  WABI_LOCAL_APPLY_CLOSEOUT_TASKSPEC_2026-05-21.json  WABI_OBSERVATION_CLAIM_ADAPTER_2026-05-21.md  WABI_RELEASE_BLOCKERS_2026-05-19.md  WABI_RELEASE_GITHUB_MEDIOEVOSPACE_2026-05-19.md  WABI_SABI_ABSORPTION_MANIFEST_2026-05-16.md  WABI_SABI_BASE_MODEL_RUNTIME_2026-05-07.md  WABI_SABI_CANONICAL_ROUTE_2026-05-16.md  WABI_SABI_CODE_TREE_MODULE_MAP_2026-05-16.md  WABI_SABI_MULTIMODAL_BRAIN_STATUS_2026-05-17.md  WABI_SABI_RUNTIME_EVIDENCE_SUMMARY_2026-05-16.md  WABI_SABI_WORKTREE_CLEANUP_MAP_2026-05-16.md  WABI_SABI_ZERO_BYTE_JOB_LOG_MANIFEST_2026-05-16.md  WABI_UI_CONVERSATION_ENGINE_2026-05-19.md  WABI_UI_TASKSPEC_GATE_PREVIEW_2026-05-19.md  WABI_UI_TASKSPEC_REVIEW_2026-05-19.md  WABI_UI_VISUAL_QA_CLOUD_BUDGET_2026-05-19.md  WABI_VIBE_CODING_MODE_2026-05-20.md  WABI_WORK_MODE_2026-05-19.md  wabi_claim_contract.example.json  wabi_cloud_code_proposal.example.json  wabi_task_spec.example.json
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/residueos/: README.md  pyproject.toml
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/residueos/examples/: sample_action.json
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/residueos/residueos/: gate.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/apps/residueos/tests/: test_residueos.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/hackathons/google-rapid-agent-2026/: .gitignore  LICENSE  README.md  pyproject.toml
OneDrive/Escritorio/-=L.R.GONZALEZ=-/hackathons/google-rapid-agent-2026/.github/: FUNDING.yml
OneDrive/Escritorio/-=L.R.GONZALEZ=-/hackathons/google-rapid-agent-2026/docs/: HACKATHON_PLAN.md  SUBMISSION_DRAFT.md
OneDrive/Escritorio/-=L.R.GONZALEZ=-/hackathons/google-rapid-agent-2026/examples/: release_goal.json
OneDrive/Escritorio/-=L.R.GONZALEZ=-/hackathons/google-rapid-agent-2026/rapid_agent_guardian/: __init__.py  agent.py  cli.py  mcp_client.py  models.py  readiness.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/hackathons/google-rapid-agent-2026/scripts/: export_public_repo.py
OneDrive/Escritorio/-=L.R.GONZALEZ=-/hackathons/google-rapid-agent-2026/tests/: test_agent.py
editorial/: 13-capas.md  (+3 more)
(+1055 files in other folders)
