[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-office"
version = "0.2.0"
description = "Mini oficina local de agentes y materiales de marketing con interfaz web estatica"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "COMMERCIAL_LICENSE.md" }
authors = [
    { name = "MEDIOEVO", email = "l-tyr-r@outlook.com" }
]
keywords = [
    "ai-agents",
    "pixel-art",
    "steampunk",
    "cyberpunk",
    "human-approved-agents",
    "flask",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://medioevo.space/software.html"

[project.scripts]
mini-office = "mini_office:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_office*", "agents*"]

[tool.setuptools.package-data]
mini_office = ["*.html", "*.css", "*.png", "*.jpg"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
