[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wabi-sabi-local-agents"
version = "0.6.0"
description = "Local-first Wabi Sabi CLI with instant auto routing, background Codex jobs, policy workpacks, and evidence logs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wabi = "wabi_sabi.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["wabi_sabi*"]

[tool.setuptools.package-data]
wabi_sabi = ["config/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
